--- a/html/pamphlet2019.html
+++ b/html/pamphlet2019.html
@@ -603,13 +603,12 @@
 <p>前項で「当局と寮自治会が対等に協議できるように」と述べましたが, 法的に管理権を有する当局と学生の間には大きな権力差があるということが前提になっています. だからこそ, その力の差を可能な限り埋め合わせ, 可能な限り対等な話し合いによって学生のよりよい福利厚生を実現しようとしているのです.</p>
 <p>例えば, 寮生は交渉で発言する際にも当局に対して名乗ることはありません. 所属を特定されて個人単位で弾圧される危険性があるからです. 京大では近年もアカデミックハラスメントが起きています. 自分の「家」について当局と意見が違っただけで, 学業面で不当な扱いを受けることがあってはなりません. もちろん, そもそも組織間の交渉なので, 寮自治会の立場を述べるのであれば, 個人が名乗る必要がないということでもあります.</p>
 <h3 id="確約の引き継ぎ">確約の引き継ぎ</h3>
-<p>確約書は厚生担当副学長の署名によって結ばれており, 形式的には副学長個人の寮に対する約束となっています. しかし, 「熊野寮自治会と京都大学の基本確約」(頁参照)とあるように, 本来的に確約は組織間の約束です. 例えば担当者(任期2年の副学長)が交代したからといって, 大学と自治会の約束がいちいち白紙に戻っては困ります. その為に, 副学長が交代しても引継ぎが自動的に, 確実になされるよう, 「次期以降の学生担当理事, 厚生補導担当副学長に引継ぐ. 」という条文が定められています.</p>
+<p>確約書は厚生担当副学長の署名によって結ばれており, 形式的には副学長個人の寮に対する約束となっています. しかし, 「<a href='#kakuyaku'>熊野寮自治会と京都大学の基本確約</a>」とあるように, 本来的に確約は組織間の約束です. 例えば担当者(任期2年の副学長)が交代したからといって, 大学と自治会の約束がいちいち白紙に戻っては困ります. その為に, 副学長が交代しても引継ぎが自動的に, 確実になされるよう, 「次期以降の学生担当理事, 厚生補導担当副学長に引継ぐ. 」という条文が定められています.</p>
 <p>ちなみに現在は, 当局の責任者として川添信介副学長が寮自治会と確約を結んでいます.</p>
 <h3 id="団体交渉">団体交渉</h3>
 <p>当事者(寮生は勿論, 今後入寮しうる京大生, その他関係者など誰でも) がすべて自由に参加できる, 公開の交渉形態です. 学内の大教室や寮食堂などで開かれてきました.</p>
 <p>例えば対照的に, 少人数の交渉形態, つまり寮自治会の代表者数名だけが参加できる協議の場というのはどうでしょうか. 経済的に苦しくてアルバイトで忙しいため自治会の交渉事に中心的に参加できていない者や, 入寮したばかりで確約などの詳しい知識が無かったりする者など, 「自分の家のことが協議される場に参加したい」という思いは皆同じです. すべての当事者(特に居住している寮生) には協議<span class="math inline">\(\cdot\)</span> 意思決定の場に参加する権利があると考え, この形態で交渉することが条文でも定められています. 団体交渉という形態を拒否すること自体も確約違反なのです.</p>
-<p><span id="page:確約" label="page:確約">[page:確約]</span></p>
-<p><strong>熊野寮自治会と京都大学の基本確約</strong></p>
+<p><strong><span id="kakuyaku"></span>熊野寮自治会と京都大学の基本確約</strong></p>
 <p>熊野寮自治会と京都大学は, 2004年3月31日に結ばれた, 両者の確約書に則り, 以下の内容に合意する. 両者は熊野寮が京都大学学生全体に開かれたものであることを確認し, その一層の充実のため誠実にこの確約内容を履行するものとする. 両者は学生の居住する熊野寮の運営に関しては, 当事者であり主体的にその責任を果たす学生の自治によることが最良であることを確認し, この認識を基礎にこの確約を結ぶものである. 本確約は文書としては二通作成し, 両者が一部ずつ所持するものとする.</p>
 <ol type="1">
 <li><p>京都大学は福利厚生施設としての熊野寮を設置し, その施設を維持<span class="math inline">\(\cdot\)</span> 管理する. 京都大学は熊野寮の一層の充実に努めるものとする.</p></li>
@@ -2114,53 +2113,24 @@ ZOZOる</p>
 <p>寮生たちの多くは疲れ果て, 彼らの中には議論を長引かせた全ての論者に対する憎悪が渦巻いていた. しかし彼らの中には, 議論を堪能した, という満足感を自覚する者もあった. 満足感を自覚できない者も, 妙に安らかに昼夜逆転の眠りに就くのであった.</p>
 <h3 id="論者cdot-主張タイプの分類まとめ">論者<span class="math inline">\(\cdot\)</span> 主張タイプの分類まとめ</h3>
 <h4 id="第一章-議論の方法論による分類">第一章: 議論の方法論による分類</h4>
-<ol type="1">
-<li>パリサイ派</li>
-</ol>
-<p>: <a href="#fn21" class="footnote-ref" id="fnref21"><sup>21</sup></a> –律法原理主義型</p>
-<pre><code>律法システムで決められていることを最重要視する.
-ここで言う律法システムとは熊野寮内のルールや伝統的原則を指す.
-具体的には徹底討論の原則,
-ブロック会議から代議員会を経て寮生大会に至る議案の検証システム等がそれらに当たる.
-
-パリサイ派は経験的に一定の信頼の置ける律法システムを遵守することで,
-意思決定のプロセスの正当性$\cdot$ 妥当性を担保しようと考える.
-そのため, 議論の流れがシステムの想定するものから外れることを嫌う.
-また, 律法システムが損なわれ「アジテーター(後述)
-」の類が恣意的に議場を誘導し,
-一時的なノリに議論が左右されるような事態が発生することを恐れている.
-
-上記の考え方は法治国家の理念にも通じ, 秩序志向性が強い. しかし,
-律法の形骸化など,
-律法システムの欠陥が顕わになった時に迅速な対応ができない傾向がある.
-このような律法システムの抱える問題の顕在化はしばしば発生するものであり,
-律法システムへの固執が集団を疲弊させてしまう虞もある.
-パリサイ派はしばしば第三章の「メタ論者(後述) 」でもある.</code></pre>
-<ol start="2" type="1">
-<li>アジテーター</li>
-</ol>
-<p>: <a href="#fn22" class="footnote-ref" id="fnref22"><sup>22</sup></a> –結果良ければすべて良し型</p>
-<pre><code>その場の議論でアジテーター自身が考える最善の結論を出すことを最重要視する.
-「最善の結論」のためなら過去の議論の積み重ねや律法の要請を無視することもいとわない.
-パリサイ派と対照的. アジテーターは発展性のない論点を変更できたり,
-パリサイ派$\cdot$
-その他の議場を疲弊させる類の論者を黙らせる力を持つ. それ故,
-アジテーターの主張が議場の大多数の本音を的確に代弁していることもあり,
-その場合は拍手喝采, 英雄的支持を得る. しかし,
-アジテーターの手法は扇動的であり,
-パリサイ派が恐れているような議場の過激化を引き起こす原因ともなり得る.
-パリサイ派に言わせればアジテーターはデマゴーゴス [^23]
-に等しいだろう. なお,
-アジテーションに失敗したアジテーターにはさむい風が吹くこととなる.
-パリサイ派を装ったアジテーターも見られる. 君主制と相性が良い.</code></pre>
 <dl>
+<dt>1 . パリサイ派<a href="#fn21" class="footnote-ref" id="fnref21"><sup>21</sup></a></dt>
+<dd><p>–律法原理主義型</p>
+<p>律法システムで決められていることを最重要視する. ここで言う律法システムとは熊野寮内のルールや伝統的原則を指す. 具体的には徹底討論の原則, ブロック会議から代議員会を経て寮生大会に至る議案の検証システム等がそれらに当たる.</p>
+<p>パリサイ派は経験的に一定の信頼の置ける律法システムを遵守することで, 意思決定のプロセスの正当性<span class="math inline">\(\cdot\)</span> 妥当性を担保しようと考える. そのため, 議論の流れがシステムの想定するものから外れることを嫌う. また, 律法システムが損なわれ「アジテーター(後述) 」の類が恣意的に議場を誘導し, 一時的なノリに議論が左右されるような事態が発生することを恐れている.</p>
+<p>上記の考え方は法治国家の理念にも通じ, 秩序志向性が強い. しかし, 律法の形骸化など, 律法システムの欠陥が顕わになった時に迅速な対応ができない傾向がある. このような律法システムの抱える問題の顕在化はしばしば発生するものであり, 律法システムへの固執が集団を疲弊させてしまう虞もある. パリサイ派はしばしば第三章の「メタ論者(後述) 」でもある.</p>
+</dd>
+<dt>2 . アジテーター<a href="#fn22" class="footnote-ref" id="fnref22"><sup>22</sup></a></dt>
+<dd><p>–結果良ければすべて良し型</p>
+<p>その場の議論でアジテーター自身が考える最善の結論を出すことを最重要視する. 「最善の結論」のためなら過去の議論の積み重ねや律法の要請を無視することもいとわない. パリサイ派と対照的. アジテーターは発展性のない論点を変更できたり, パリサイ派 <span class="math inline">\(\cdot\)</span> その他の議場を疲弊させる類の論者を黙らせる力を持つ. それ故, アジテーターの主張が議場の大多数の本音を的確に代弁していることもあり, その場合は拍手喝采, 英雄的支持を得る. しかし, アジテーターの手法は扇動的であり, パリサイ派が恐れているような議場の過激化を引き起こす原因ともなり得る. パリサイ派に言わせればアジテーターはデマゴーゴス <a href="#fn23" class="footnote-ref" id="fnref23"><sup>23</sup></a> に等しいだろう. なお, アジテーションに失敗したアジテーターにはさむい風が吹くこととなる. パリサイ派を装ったアジテーターも見られる. 君主制と相性が良い.</p>
+</dd>
 <dt>2’. 一揆指導者</dt>
 <dd><p>–今夜が山田型</p>
 <p>効果的なアジテーションができるタイミングを虎視眈々と狙い, それらしきタイミングに「今だ! 」とばかりに発言する. アジテーターとしていることは変わらないが, アジテーションのタイミングを最後まで見つけられず, 空振りすることもしばしば.</p>
 </dd>
 <dt>3. 手続き論者</dt>
 <dd><p>–合意主義型</p>
-<p>議場の合意を最重要視する. ここで言う合意とは異論を主張する人間がいない状況を指す. 議論が合意を基に進んでいく状態を理想とする. 合意の手続きを前提に律法をその場に限って適用しない, 等柔軟な対応をすることが可能. 手続き論者はパリサイ派とアジテーターをアウフヘーベン <a href="#fn23" class="footnote-ref" id="fnref23"><sup>23</sup></a> している面があり, 弁証法的観点から進んだ見地と言える. 議長は通常手続き論者の立場を採る.</p>
+<p>議場の合意を最重要視する. ここで言う合意とは異論を主張する人間がいない状況を指す. 議論が合意を基に進んでいく状態を理想とする. 合意の手続きを前提に律法をその場に限って適用しない, 等柔軟な対応をすることが可能. 手続き論者はパリサイ派とアジテーターをアウフヘーベン <a href="#fn24" class="footnote-ref" id="fnref24"><sup>24</sup></a> している面があり, 弁証法的観点から進んだ見地と言える. 議長は通常手続き論者の立場を採る.</p>
 <p>合意主義型の弱点はゴネる論者への対応が難しいことだ.</p>
 <p>手続き論者がなかなか合意形成の取れない論者と出くわした時に採り得る行動は以下の3つに大分される.</p>
 <ol type="1">
@@ -2178,7 +2148,7 @@ ZOZOる</p>
 <h4 id="第二章-主張の根拠による分類">第二章: 主張の根拠による分類</h4>
 <dl>
 <dt><span class="math inline">\(a\)</span>. 会津人</dt>
-<dd><p>–ならぬものはならぬ <a href="#fn24" class="footnote-ref" id="fnref24"><sup>24</sup></a> 型</p>
+<dd><p>–ならぬものはならぬ <a href="#fn25" class="footnote-ref" id="fnref25"><sup>25</sup></a> 型</p>
 <p>社会常識, 公衆道徳を自己の主張の正しさの根拠とする. しかし, 「社会常識」「公衆道徳」とは当人の信じるそれであり, 皆が同じものを信じているとは限らない. 故に, しばしば信念の衝突が発生する. 信念には客観的根拠がないので, この型の主張同士の対立を論理的に解くことはできず, アジテーション合戦をした後に多数決をするのが穏当な解決策となる.</p>
 </dd>
 <dt><span class="math inline">\(a&#39;\)</span>. 信者</dt>
@@ -2197,7 +2167,7 @@ ZOZOる</p>
 <dd><p>議題の提起者. 資料を作成していることが多い. 言い出しっぺの提起内容及び参考資料の洗練具合は議論の円滑さを最も強く決定づける, と言っても過言ではない. それ故, 参加者の多い寮生大会等の議論に議題を提起する場合は, 事前の議論でプロテスタントやプロバイダー(後述) の意見を集約し, 整理した上で元々の議案にできるだけ反映させる必要がある. この作業が十分行われているかどうかを判定する機関が代議員会であり, もし不十分という結論がでたらその議案は寮生大会では議論されず, 採決も行えない. しかし, たとえ代議員会を通っても, 提起内容が多数の者にとってどうでもよいものであるように思われる時, 言い出しっぺは議場のヘイトを買うこととなる. なお, 代議員会出席者が, 期待されている業務をしっかりこなしているとは限らない.</p>
 </dd>
 <dt><span class="math inline">\(\beta\)</span> . プロテスタント</dt>
-<dd><p><a href="#fn25" class="footnote-ref" id="fnref25"><sup>25</sup></a> 提起された議案に反対する立場. しかし, 反対理由<span class="math inline">\(\cdot\)</span> 反対手法は実に多様であり, 他の章の全ての立場になり得る. 後述の「プロバイダー」「メタ論者」「定義厨」に擬態していることもしばしばあり, プロテスタントかそうでないのか見分けを付けるのが困難なこともある.</p>
+<dd><p><a href="#fn26" class="footnote-ref" id="fnref26"><sup>26</sup></a> 提起された議案に反対する立場. しかし, 反対理由<span class="math inline">\(\cdot\)</span> 反対手法は実に多様であり, 他の章の全ての立場になり得る. 後述の「プロバイダー」「メタ論者」「定義厨」に擬態していることもしばしばあり, プロテスタントかそうでないのか見分けを付けるのが困難なこともある.</p>
 </dd>
 <dt><span class="math inline">\(\gamma\)</span> . プロバイダー</dt>
 <dd><p>新たな論点の提供者. 言い出しっぺの想定していない論点を提供する. 寮の議事システムではブロック会議でプロバイダーによる新論点を出し尽くしてから寮生大会のような規模の大きな議論に移行することが理想的状態として想定されているが, 実際は寮生大会の途中でもプロバイダーが次々と現れることが多く, 「その論点事前に指摘しておけよ! 」と言いたくなるような状況が発生する. しかし, プロバイダーが事前に提供していた新論点を言い出しっぺが無視することもあり, その場合はやむ無く寮生大会で再びその論点を提示することとなる. なお, 言い出しっぺによるプロバイダーの無視が常に悪いとは限らない.</p>
@@ -2267,7 +2237,7 @@ ZOZOる</p>
 <p>丸太町通に面する熊野寮, 門をくぐるとおびただしい自転車と, 建物の壁に書かれた絵が目に入ります. まあ, HP見るなりGoogle Earthのストリートビュー見るなり実際に訪れるなりして下さい. 建物内部も外部も, 見た目はインパクトがありますが, そこまで恐ろしい場所ではありません. ささ, 中へ入ってみましょう.</p>
 <p>寮の玄関を入ると, こたつやら年季の入った貼り紙やらが出迎えてくれます. しかしふと目をやると, そこには何ともかわいらしい熊ギャラリーが. 北海道土産からリラッ#マまで, 歴代の寮生が集めた熊グッズが詰め込まれています. じっくり眺めてみると楽しいかもしれません.</p>
 <p>ダンスもできるほど広い食堂へ入ると, ご飯を食べる人, PCをたたく人, 議論する人, 寝る人, だべる人.… 食堂は寮生の憩いの場です. 熊野寮には全国でも珍しく寮食堂があり, 安価で栄養価の高い寮食が食べられます. 女性には少々量が多いかもしれません. 友人と半分こして食べる人もいますよ. ちなみに私は, 1年たったら余裕で食べ切れるようになりました. え? カロリー基準は成人男性? ...そんなの知りません. ちなみに, 各階に炊事場もちゃんとあります. 個人的には, 炊事場に瞬間湯沸かし器がついている点がポイント高いです. 冬でも安心!</p>
-<p>熊野寮にはお風呂はなく, 共用のシャワー室があります. 近所に銭湯があるので, お湯につかりたくなったらぜひお試しあれ. 女子シャワーは2つしかなく, 特に夜は混雑必至です. コインが詰まった時の絶望感は凄まじいですね<a href="#fn26" class="footnote-ref" id="fnref26"><sup>26</sup></a>. 寮生になる方へのプチアドバイス. 早朝や深夜, 夕方は割と空いているかと思われます. ただしお昼には清掃業者さんが入るのでご注意を. ちなみに, 外見は強烈な熊野寮ですが, 意外にもお手洗いは新しくて綺麗なのです!</p>
+<p>熊野寮にはお風呂はなく, 共用のシャワー室があります. 近所に銭湯があるので, お湯につかりたくなったらぜひお試しあれ. 女子シャワーは2つしかなく, 特に夜は混雑必至です. コインが詰まった時の絶望感は凄まじいですね<a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a>. 寮生になる方へのプチアドバイス. 早朝や深夜, 夕方は割と空いているかと思われます. ただしお昼には清掃業者さんが入るのでご注意を. ちなみに, 外見は強烈な熊野寮ですが, 意外にもお手洗いは新しくて綺麗なのです!</p>
 <p>熊野寮で人が溜まる場所といえば, 玄関付近, 食堂, 談話室 (およそ各フロアにある共用空間. 一般に会議したり漫画読んだり映画見たりゲームしたり住み着いたりする.)が主に挙げられます. 私は談話室びいきな人間なのですが, 寮に入ったらどこでもいいので顔を出して, 人に話しかけてみたらいいと思います. コンパなんかもちょくちょくあるので参加してみるべし! きっと気の合う人に出会えるはず...です. 七回生八回生それ以上, 出身地も全国津々浦々, 色々な人がいます. 学部, サークルとはまた一味違う人間関係をお楽しみください.</p>
 <p>あ, 食堂に人が集まっていますね. あれは部会の集まりです. 熊野寮では寮内の仕事を寮生が分担してやっています. 入寮したら, 部会<span class="math inline">\(\cdot\)</span> 委員会に一つずつ所属して, 寮内の環境整備や問題解決といったお仕事をします. 仕事はちゃんとしてね</p>
 <p>なんだかんだと説明されても, やっぱり入ってみないとわかりませんよね! 私のレポートでは単位は取れません. じゃあどうしましょう? 熊野寮に来て他の先輩の意見を聞いてみましょう!</p>
@@ -2275,7 +2245,7 @@ ZOZOる</p>
 <h3 id="受験生へ宛てて">受験生へ宛てて</h3>
 <p>この入寮パンフレットを手に取った方に何を語ろうかと思案していましたが, 入寮した当初, 自分が知りたかったことを書いていこうと思います. 私が熊野寮に入ろうと思ったのはお金がかからないことと, 寮食があるからという理由でした. 食は大事です. 食べることは幸せです.</p>
 <p>熊野寮では寮食があります. 品数いっぱいでおいしいです. 下宿していれば買い物へ行き, 調理をし, おいしく食べ, 片づけをする, という時間がかかりますが, 寮ではありがたいことにその時間がおいしく食べる, だけになります. 平日の忙しい中, 非常に助かります. しかし, 食堂が営業しているのは授業期間中の平日だけです. 土日や長期休業中は自分で何とかしなければなりません.</p>
-<p>そこでお世話になるのがスーパーです. 熊野寮の近くにはスーパーが3軒あります. 一番近いのはサンプラザ<a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a>. 寮から東に徒歩5分ほど. 距離的には便利なのですが, 全体的に商品が高めです. 私はあまり行きません. 次に近いのはフレスコ. 寮から西に徒歩10分ほど. 鴨川を渡ってすぐです. 曜日ごとに安い商品がありお得です. お肉とか野菜が安かったりします. そしてお惣菜の種類が豊富です. 距離的にはフレスコと同じくらいなのがイオン. 寮から南に徒歩10分ちょっと. (2017年3月まで熊野橋が工事中. 通れるようになったら近くなる. ) 全体的に安め. 火曜市や5倍デーなどをうまく利用すればお得です. 価格重視の品からちょっとお高めの品物まで幅広く扱っています. 私はイオンによく行きます. トップバリュのような安定して安いものがあるので安心です. それから, 安さ重視でいったら業務用スーパーが一番です. 車があれば山科の業スー(大きい)で買いだめしたりもできます. 自転車で行ける範囲でいえば三条河原町, 四条寺町にもあります. 新歓や誕生日会の買い出しでよく使いました.</p>
+<p>そこでお世話になるのがスーパーです. 熊野寮の近くにはスーパーが3軒あります. 一番近いのはサンプラザ<a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a>. 寮から東に徒歩5分ほど. 距離的には便利なのですが, 全体的に商品が高めです. 私はあまり行きません. 次に近いのはフレスコ. 寮から西に徒歩10分ほど. 鴨川を渡ってすぐです. 曜日ごとに安い商品がありお得です. お肉とか野菜が安かったりします. そしてお惣菜の種類が豊富です. 距離的にはフレスコと同じくらいなのがイオン. 寮から南に徒歩10分ちょっと. (2017年3月まで熊野橋が工事中. 通れるようになったら近くなる. ) 全体的に安め. 火曜市や5倍デーなどをうまく利用すればお得です. 価格重視の品からちょっとお高めの品物まで幅広く扱っています. 私はイオンによく行きます. トップバリュのような安定して安いものがあるので安心です. それから, 安さ重視でいったら業務用スーパーが一番です. 車があれば山科の業スー(大きい)で買いだめしたりもできます. 自転車で行ける範囲でいえば三条河原町, 四条寺町にもあります. 新歓や誕生日会の買い出しでよく使いました.</p>
 <p>ここまで私が知っているスーパーについて語ってきましたが, 自炊する気分じゃないときってありますよね. そういう時はコンビニに行ったり外食したりします. コンビニはどこにでもあるので外食についても少し語ろうかな.</p>
 <p>京都はカレー屋さんが多い気がします. 皆さん思いませんでしたか? 寮から東に徒歩3分のチャンダー, その数軒隣にスパイシー, サンプラザの上にはアラシのキッチン, 京大病院の向かいにはビイヤント, 北部キャンパスの近くにはラジュなど.</p>
 <p>チャンダーは寮から近いだけあって寮生との遭遇率が高いです. ランチセットがお得. チーズナンがおすすめです. スパイシーは一度行きましたが辛めのカレーのイメージです. アラシのキッチンは行ったことないなあ. ビイヤントはサフランライスが食べられます. おいしい. ラジュはナンをお代わりさせてくれます. 一枚でもお腹いっぱいになるのであまりしたことがありません. どこも価格は800円から1000円くらいでしょうか. 普通ですね.</p>
@@ -2388,7 +2358,7 @@ ZOZOる</p>
 <dd><p>400人に対して大学が支給するのがなぜか家庭用の乾燥機3台なので, 酷使されて頻繁に故障します. 人数規模だけでも, 壊れるのは当たり前だと思うのですが, 職員は「服を詰め込みすぎたり, 使い方悪いんじゃないの? 」って言ってます.</p>
 </dd>
 <dt>おじさん</dt>
-<dd><p>全員部屋干ししてるとその内何も気にならなくなって世界平和が訪れます. 布団は屋上に干す人が多い気がするけど, 今屋上使えないので<a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a>僕は万年布団になってます</p>
+<dd><p>全員部屋干ししてるとその内何も気にならなくなって世界平和が訪れます. 布団は屋上に干す人が多い気がするけど, 今屋上使えないので<a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a>僕は万年布団になってます</p>
 </dd>
 </dl>
 <p><strong>Q. 熊野寮に入寮予定の保護者です. いくつか質問をさせてください. 食事はどのような形態ですか? 寮生からの評判はどうですか? 食事の時間は決まっていますか? 入寮時に必須の持ち物, あった方がよい物等教えて下さい. よろしくお願いします.</strong></p>
@@ -2490,12 +2460,13 @@ ZOZOる</p>
 <li id="fn20"><p>労働者階級のこと. ブルジョア(資本家) の対義語. 通常, 共産主義的文脈で使われる言葉.<a href="#fnref20" class="footnote-back">↩</a></p></li>
 <li id="fn21"><p>古代ユダヤ教内グループの一. 紀元前2世紀<span class="math inline">\(\sim\)</span> 紀元1世紀頃に活動. 新約聖書の福音書にイエスを敵対視する保守勢力として登場. イエスに「偽善な律法学者」と呼ばれ, 非難された.<a href="#fnref21" class="footnote-back">↩</a></p></li>
 <li id="fn22"><p>アジテーションとは強い調子の文章や演説などによって人々の気持ちをあおり, ある行動を起こすようにしむけること. 扇動. (以上, goo国語辞典より引用) アジテーターはアジテーションをする人のこと.<a href="#fnref22" class="footnote-back">↩</a></p></li>
-<li id="fn23"><p>矛盾するものを更に高い段階で統一し解決すること. 弁証法の概念. 「アウフヘーベン」はドイツ語で, 日本語では「止揚」と訳される.<a href="#fnref23" class="footnote-back">↩</a></p></li>
-<li id="fn24"><p>江戸時代, 会津藩校が作成した「什の掟」をしめくくる言葉.<a href="#fnref24" class="footnote-back">↩</a></p></li>
-<li id="fn25"><p>キリスト教の一宗派. 16世紀の宗教改革でローマ<span class="math inline">\(\cdot\)</span> カトリックから分離する形で成立した. 「プロテスタント」とは“抗議する者”を意味し, この文章においてはその意味を汲んでこの語を使用した.<a href="#fnref25" class="footnote-back">↩</a></p></li>
-<li id="fn26"><p>編者注: 当時のシャワーは10円玉を入れるコイン式であった. 現在はICカード式になったのでこのような故障はなくなった. やったね!<a href="#fnref26" class="footnote-back">↩</a></p></li>
-<li id="fn27"><p>編者注: かつて東山丸太町の交差点にあったスーパー. 現在は閉店し, 跡地は薬局になっている<a href="#fnref27" class="footnote-back">↩</a></p></li>
-<li id="fn28"><p>編者注: 当時は工事中で屋上が利用できなかったことを言っていると思われる. 現在は工事は終了し再び利用できるようになった<a href="#fnref28" class="footnote-back">↩</a></p></li>
+<li id="fn23"><p>紀元前5世紀, ペロポネソス戦争の最中にギリシアのアテネに出現した扇動政治家達の総称. デマの語源. デマゴーゴスによる大衆扇動が原因でアテネがそれまで作り上げた民主政は衆愚的状況に陥った. 結果, アテネは勝てるはずだった戦争に敗北した挙句, それ以後1000年以上に渡って衰退し続けることとなった.<a href="#fnref23" class="footnote-back">↩</a></p></li>
+<li id="fn24"><p>矛盾するものを更に高い段階で統一し解決すること. 弁証法の概念. 「アウフヘーベン」はドイツ語で, 日本語では「止揚」と訳される.<a href="#fnref24" class="footnote-back">↩</a></p></li>
+<li id="fn25"><p>江戸時代, 会津藩校が作成した「什の掟」をしめくくる言葉.<a href="#fnref25" class="footnote-back">↩</a></p></li>
+<li id="fn26"><p>キリスト教の一宗派. 16世紀の宗教改革でローマ<span class="math inline">\(\cdot\)</span> カトリックから分離する形で成立した. 「プロテスタント」とは“抗議する者”を意味し, この文章においてはその意味を汲んでこの語を使用した.<a href="#fnref26" class="footnote-back">↩</a></p></li>
+<li id="fn27"><p>編者注: 当時のシャワーは10円玉を入れるコイン式であった. 現在はICカード式になったのでこのような故障はなくなった. やったね!<a href="#fnref27" class="footnote-back">↩</a></p></li>
+<li id="fn28"><p>編者注: かつて東山丸太町の交差点にあったスーパー. 現在は閉店し, 跡地は薬局になっている<a href="#fnref28" class="footnote-back">↩</a></p></li>
+<li id="fn29"><p>編者注: 当時は工事中で屋上が利用できなかったことを言っていると思われる. 現在は工事は終了し再び利用できるようになった<a href="#fnref29" class="footnote-back">↩</a></p></li>
 </ol>
 </section>
 </body>
