--- a/pamphlet-converter/output/index.html
+++ b/pamphlet-converter/output/index.html
@@ -1,7 +1,1 @@
-<a href='./pages/入寮にあたって.html'>入寮にあたって</a>
-<a href='./pages/寮での生活.html'>寮での生活</a>
-<a href='./pages/寮と大学と自治.html'>寮と大学と自治</a>
-<a href='./pages/寮生の生態.html'>寮生の生態</a>
-<a href='./pages/寮生の声.html'>寮生の声</a>
-<a href='./pages/寮生の声 —過去の傑作選.html'>寮生の声 —過去の傑作選</a>
-<a href='./pages/FAQ – 熊野寮生だけど質問ある?.html'>FAQ – 熊野寮生だけど質問ある?</a>
+<div><ul><li><a href="pages/入寮にあたって.html">入寮にあたって</a></li><li><a href="pages/寮での生活.html">寮での生活</a></li><li><a href="pages/寮と大学と自治.html">寮と大学と自治</a></li><li><a href="pages/寮生の生態.html">寮生の生態</a></li><li><a href="pages/寮生の声.html">寮生の声</a></li><li><a href="pages/寮生の声 —過去の傑作選.html">寮生の声 —過去の傑作選</a></li><li><a href="pages/FAQ – 熊野寮生だけど質問ある?.html">FAQ – 熊野寮生だけど質問ある?</a></li></ul></div>
